# amber

./: .gitignore  Makefile  README.md  amber.yaml  dashboard_backend.py  dashboard_backend_v2.py  decorators.py  join_spike.py  pyproject.toml  server.py
admin_control_plane/: dashboard_backend.py
admin_dashboard/: dashboard_backend.py
agents/: filetobuildfolderstructure.md
cli/: MANIFEST.in  README.md  build_validation.py  pyproject.toml  setup.py
cli/amber_cli/: __init__.py  admin_access.py  assets.py  aws_auth.py  config_loader.py  dashboard_api.py  dashboard_auth.py  discovery.py  preflight.py  routes.py
cli/amber_cli/asset_sources/bootstrap/: amber-bootstrap.yaml
cli/amber_cli/asset_sources/docker/: .dockerignore  Dockerfile.customer-app  Dockerfile.customer-worker  Dockerfile.dashboard-api  install_app_deps.py  strip_prefix.py
cli/amber_cli/assets/: banner.txt
cli/amber_cli/commands/: __init__.py  admin.py  auth.py  config.py  dashboard.py  deploy.py  destroy.py  init.py  status.py  workflows.py
cli/scripts/: prepare_assets.py
cli/tests/: test_admin.py  test_auth.py  test_build_validation.py  test_config.py  test_dashboard_auth.py  test_dashboard_command.py  test_deploy.py  test_destroy.py  test_init_discovery.py  test_local_package_smoke.py  test_preflight.py  test_status.py  test_workflows.py
dashboard/: README.md  dashboard_backend.py
dashboard/backend/: server.py  test_auth.py
dashboard/frontend/: vite.config.ts
dashboard/frontend/src/: App.tsx
dashboard/frontend/src/lib/: api.test.ts  api.ts  auth.test.tsx  auth.tsx
dashboard/frontend/src/pages/details/: WorkflowDetailPage.test.tsx
dashboard/frontend/src/pages/details/components/: StepList.test.tsx  StepRow.test.tsx  StepRow.tsx
dashboard/frontend/src/pages/list/: WorkflowListPage.tsx
dashboard/frontend/src/shared/: PageHeader.tsx
dashboard/src/: App.tsx
dashboard/src/components/: GanttStrip.tsx  StepCard.tsx  StepTimeline.tsx  TurnGroup.tsx
dashboard/src/lib/: api.ts  mockWorkflowRunner.ts  stepHelpers.test.ts  stepHelpers.ts  types.ts  workflowContext.tsx
dashboard/src/pages/details/: WorkflowDetailPage.test.tsx  WorkflowDetailPage.tsx
dashboard/src/pages/details/components/: AgentGroupSection.tsx  FinalAnswerCard.tsx  GanttStrip.tsx  StepCard.tsx  StepList.test.tsx  StepList.tsx  StepRow.test.tsx  StepRow.tsx  StepTimeline.tsx  TurnGroup.tsx  WorkflowHeader.test.tsx  WorkflowHeader.tsx
dashboard/src/pages/list/: WorkflowListPage.test.tsx  WorkflowListPage.tsx
dashboard/src/pages/queued/: QueuedPage.tsx
dashboard/src/shared/: PageHeader.tsx  workflowStatus.tsx
dashboard/src/test/: fixtures.ts
deprecated/mordec_ai_agents/: __init__.py  email_campaign.py
example_customer_app/: README.md  main.py  requirements.txt  worker.py
example_customer_app/static/: app.js
example_customer_app/templates/: index.html
example_customer_app/tests/: support.py  test_demo_behavior.py
example_customer_app/user_agents/: account_research_error_demo.py  account_research_error_demo_v2.py  another_multi_agent_demo.py  multi_agent_demo.py  queued_multi_agent_demo.py  single_agent_demo.py
infra/: README.md
infra/docker/: Dockerfile.customer-app  Dockerfile.customer-worker  Dockerfile.dashboard-api  run_worker.py  strip_prefix.py
infra/scripts/: deploy-frontend.sh
infra/terraform/: alb.tf  autoscaling.tf  cloudfront.tf  cognito.tf  ecs.tf  outputs.tf  rds.tf  rds_proxy.tf  s3.tf  secrets.tf  security_groups.tf  ssm.tf  terraform.tfvars.example  variables.tf
mordec_ai_agents/: agent.py
sdk/: README.md  pyproject.toml
sdk/amber/: decorators.py  runtime.py  worker.py
sdk/amber/dashboard/: queries.py
sdk/src/sdk/: __init__.py  decorators.py  queries.py  runner.py  runtime.py  worker.py
sdk/src/sdk/dashboard/: client.py  models.py
tests/: counter.py  open_inference_test.py  test_dashboard_backend.py  test_dashboard_client.py  test_queue_metrics.py  test_sdk_reliability.py  weather_agent.py
tests/load_testing/: README.md  load_app.py  load_worker.py  synthetic_queue_agent.py
tests/load_testing/scripts/: queue_drain_report.py
(+4 files in other folders)
