[project]
name = "amber-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "inngest>=0.4",
    "dbos==2.20.0",
    "pydantic>=2.13.3",
    "amber-sdk",
    "amber-runtime",
    "openai-agents>=0.17.2",
    "python-dotenv>=1.2.2",
    "dbos-openai-agents>=0.3.0",
    "ddgs>=9.0",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "sdk",
    "cli",
]

[tool.uv.sources]
amber-sdk = { workspace = true }
amber-runtime = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
