[project]
name = "amber-runtime"
version = "0.1.0"
description = "Amber Runtime — durable AI agent execution"
requires-python = ">=3.11"
dependencies = [
    "amber-sdk>=0.1.0",
    "click>=8.1",
    "rich>=13.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
]

[project.scripts]
amber = "amber_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amber_cli"]
