[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amber-runtime"
version = "0.1.2"
description = "Deploy and operate durable AI agents in customer-owned AWS environments"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Amber" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "amber-sdk>=0.1.2",
    "certifi>=2023.7.22",
    "click>=8.1",
    "rich>=13.0",
    "boto3>=1.34",
    "botocore>=1.34",
    "pyyaml>=6.0",
]

[project.scripts]
amber = "amber_cli.main:cli"

[project.urls]
Repository = "https://github.com/amber-runtime/playground"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["amber_cli*"]
exclude = ["amber_cli.asset_sources*"]
namespaces = false

[tool.setuptools.package-data]
amber_cli = [
    "assets/docker/.dockerignore",
    "assets/**/*",
]
